fix: monaco overflow

--- a/playground/src/styles/main.css
+++ b/playground/src/styles/main.css
@@ -1,1 +1,6 @@
 @import '@unocss/reset/tailwind.css';
+
+.overflowingOverlayWidgets > *,
+.overflowingContentWidgets > * {
+  --at-apply: translate-y-22;
+}
